[package]
name = "gpt-ask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
structopt = "0.3.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
